configuracoes base do projeto - gerando codigo a partir do swagger - adicionando rota para consultar o swagger
