# swagger.yaml
@@ -4,7 +4,7 @@ info:
   description: servico responsavel por prover dados para o app bora-rachar
   version: 1.0.0
 servers:
-  - url: http://api.example.com/v1
+  - url: http://localhost:8080
 paths:
   /screens/login:
     post:
@@ -382,9 +382,7 @@ paths:
         content:
           application/json:
             schema:
-              properties:
-                isAdmin:
-                  type: string
+              $ref: '#/components/schemas/UpdateParticipantRequestBody'
       responses:
         '200':
           description: ok
@@ -796,6 +794,10 @@ components:
       properties:
         userId:
           type: string
+        isAdmin:
+          type: boolean
+    UpdateParticipantRequestBody:
+      properties:
         isAdmin:
           type: boolean
   parameters:
